# remote-explorer-game

./: .gitignore  LICENSE  README.md  build.sh  explorer-game.sln  pyproject.toml
.github/scripts/: check_python_release.py
.github/workflows/: deploy-docs.yml  preview-docs.yml  publish-csharp.yml  publish-python.yml  publish.yml
docs/: GETTING_STARTED.md  INTRODUCTION.md  SERVER_SETUP.md  TUTORIALS.md
docs/site-src/: docfx.json  index.md  toc.yml
example-async/: Program.cs  example-async.csproj
example-async-multiple-agents/: Program.cs  example-async-multiple-agents.csproj
example-custom-server/: example-custom-server.csproj
example-feedback/: Program.cs  example-feedback.csproj
example-multiple-agents/: Program.cs  example-multiple-agents.csproj
example-simple/: example-simple.csproj
example-solution/: Program.cs  example-solution.csproj
examples/csharp/01-simple/: Program.cs  example-simple.csproj
examples/csharp/02-feedback/: 02-feedback.csproj  ExampleFeedback.cs  Program.cs
examples/csharp/03-multiple-agents/: 03-multiple-agents.csproj  ExampleMultipleAgents.cs  Program.cs
examples/py/: TUTORIAL.md
explorer-game/: Base.cs  ConsoleVisualizer.cs  Core.cs  Logger.cs  NUGET_README.md  Parsers.cs  Remote.cs  Server.cs  Utils.cs  explorer-game.csproj
lesson-exec/: Program.cs  lesson-exec.csproj
local-exec/: Program.cs  local-exec.csproj
py-lib/: example-feedback.py  example-simple.py  remote_explorer_game.py  requirements.txt
py-lib/remote_explorer_game/: __init__.py  remote_explorer_game.py
solution/: Program.cs
(+19 files in other folders)
