[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-explorer-game"
version = "1.3.1"
description = "Client library for the Remote Explorer Game"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "David Krčmář" }]
keywords = ["game", "client", "httpx", "explorer"]
dependencies = [
  "httpx>=0.24",
  "numpy>=1.24",
]

[tool.setuptools]
package-dir = {"" = "py-lib"}

[tool.setuptools.packages.find]
where = ["py-lib"]
include = ["remote_explorer_game*"]
